apps/pocketid/controller/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid-route
  namespace: pocketid
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.kdmorris.dev
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "auth.kdmorris.dev"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ""
        kind: Service
        name: pocketid-pocket-id
        port: 80
